trunk/src/objects/WikiSubscription__c.object
<CustomObject>
    <fields>
        <fullName>TeamMemberJoinLeave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TeamMemberJoinLeave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TeamMemberStatusUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TeamMemberStatusUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <referenceTo>Wiki__c</referenceTo>
        <relationshipLabel>WikiSubscriptions</relationshipLabel>
        <relationshipName>WikiSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WikiSubscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WikiCreatedByMeUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WikiCreatedByMeUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WikiNewPage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WikiNewPage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WikiPageUpdated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WikiPageUpdated</label>
        <type>Checkbox</type>
    </fields>
    <label>WikiSubscription</label>
    <nameField>
        <label>WikiSubscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WikiSubscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>